# netswitch-switch-benchmark-view

./: CLIENTS.md  index.html  manifest.webmanifest  sw.js
client-cli/: .gitignore  README.md  build.sh  ggw_cli.cpp
client-qt/: .gitignore  CMakeLists.txt  README.md  build.sh  ggw-client.pro  main.cpp
docs/: 6ggw-switch-control.md  ARCHITECTURE.md  architecture.html  test-guide.html
dramm/: cpu_benchmark.cpp  cpu_benchmark.h
ipr/: .gitignore  README.md  build.sh  ggw_ipr.cpp  ipr-verification.txt
packaging/ggw6-app/: .gitignore  BUILD-APK.md  README.md  capacitor.config.json  package-lock.json  package.json
packaging/ggw6-app/android/app/: build.gradle
packaging/ggw6-app/android/app/src/main/java/com/ai2orbit/ggw6/: MainActivity.java
packaging/ggw6-app/android/app/src/main/res/values/: strings.xml
packaging/ggw6-app/www/: index.html  manifest.webmanifest  sw.js
server/: README.md  backup.js  package.json  restore.js  server.js
server-cpp/: .gitignore  CMakeLists.txt  README.md  build.sh  ggw-server.service  ggw_server.cpp
stream-ctl/: .gitignore  README.md  build.sh  ggw_streamctl.cpp  streamctl-verification.txt
stream-qc/: .gitignore  README.md  build.sh  gen_test.sh  ggw_streamqc.cpp  stream-qc-verification.txt
